Correct upper margin with filters visible

--- a/features/polyExplorer/src/components/companyList/companyList.css
+++ b/features/polyExplorer/src/components/companyList/companyList.css
@@ -17,6 +17,7 @@
 
 .active-filters button {
     margin-left: 4px;
+    margin-top: 24px;
     margin-bottom: 12px;
     height: 32px;
     padding: 0 12px 0 12px;
